--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <a href="index.html">Login</a></br>
+        <a href="index.html">sign-up</a></br>
     
 </body>
 </html>
