Add some styling

--- a/sign-up.html
+++ b/sign-up.html
@@ -9,19 +9,19 @@
 </head>
 
 <body>
-    <form>
-        Username: <input type='text'placeholder='John Snow' /> <br>
-        Email:<input type='email' placeholder='email@xyz.com'/><br>
-        Password: <input type='password' /> <br>
-        Repeat Password <input type='password'/> <br>
-        Telephone: <input type='phone'/> <br>
-        Country:<input type='text'><br> 
-        <input type='checkbox'>Remember me</type>
-       
-        </br>
-        <button type="button">Login</button>
-    </form>
-
+    <div class="form">
+        <form>
+            <label>Username:</label> <input type='text' placeholder='John Snow' /> <br>
+            <label> Email:</label> <input type='email' placeholder='email@xyz.com' /><br>
+            <label> Password:</label> <input type='password' /> <br>
+            <label> Repeat Password: </label><input type='password' /> <br>
+            <label> Telephone:</label> <input type='phone' /> <br>
+            <label> Country:</label> <input type='text'><br>
+            <input type='checkbox'>Remember me</type>
+            </br>
+            <button type="button">Login</button>
+        </form>
+    </div>
 </body>
 
 </html>
